--- a/corsi/centro_ottava.qmd
+++ b/corsi/centro_ottava.qmd
@@ -1,12 +1,20 @@
 ---
 layout: post
 title:  "Centro Ottava"
-author: monserrat
 categories: [0-36 mesi,3-5 anni,scuole di musica]
-image: "/image/diconcerto_ensemble.jpg"
+image: "/image/centroottava-logo.png"
 ---
 
+::: {layout="[ 20, 80 ]"}
+::: {#first-column}
+![](/image/centroottava-logo.png){fig-align="left"}
+:::
+
+::: {#second-column}
 #### [Centro Ottava](https://www.centrottava.it/)
 
--   Sabato 10:30 alle 11:30 primi passi cantando, per bambini da 0 a 36 mesi accompagnati da un genitore.
--   Sabato 11:30 alle 12:30 giochi in musica, per bambini da 3 a 5 anni
+Sabato 10:30 alle 11:30 primi passi cantando, per bambini da 0 a 36 mesi accompagnati da un genitore.
+
+Sabato 11:30 alle 12:30 giochi in musica, per bambini da 3 a 5 anni
+:::
+:::
