--- a/corsi/centro_ottava.qmd
+++ b/corsi/centro_ottava.qmd
@@ -18,3 +18,9 @@ Sabato 10:30 alle 11:30 primi passi cantando, per bambini da 0 a 36 mesi accompa
 Sabato 11:30 alle 12:30 giochi in musica, per bambini da 3 a 5 anni
 :::
 :::
+
+#### **Monserrat Olavarria Balmaceda**
+
+cellulare: [+39 342 371 1750](tel:+393423711750)
+
+email: [olavarria.balmaceda\@gmail.com](mailto:olavarria.balmaceda@gmail.com)
