--- a/corsi/tiburtino.qmd
+++ b/corsi/tiburtino.qmd
@@ -17,3 +17,9 @@ image: "/image/tiburtino_logo.png"
 -   Venerdì 17:00 alle 18:00 Dai 3 ai 6 anni -- Propedeutica musicale
 :::
 :::
+
+#### **Monserrat Olavarria Balmaceda**
+
+cellulare: [+39 342 371 1750](tel:+393423711750)
+
+email: [olavarria.balmaceda\@gmail.com](mailto:olavarria.balmaceda@gmail.com)
