--- a/spettacoli/avenidamerica.qmd
+++ b/spettacoli/avenidamerica.qmd
@@ -1,8 +1,9 @@
 ---
 title: "Avenidamerica"
-image: images/avenidamerica.jpg
 categories: [AvenidAmerica]
 ---
+
+![](/image/avenidamerica.jpeg)
 
 **AVENIDAMERICA** in concerto Latin-folk, jazz, contaminazioni etniche e canzone d'autore
 
