--- a/spettacoli/sciamanici.qmd
+++ b/spettacoli/sciamanici.qmd
@@ -5,9 +5,7 @@ categories: [AvenidAmerica]
 
 ![](/image/sciamanici.jpeg)
 
-## AVENIDAMERICA
-
-concerto. Un viaggio poetico e giocoso e attraverso le storie e la musica del Sud America.
+**AVENIDAMERICA** in concerto. Un viaggio poetico e giocoso e attraverso le storie e la musica del Sud America.
 
 "C'erano una volta gli dei, i primi, quelli che crearono il mondo. Formarono con le loro mani, impastando il mais profumato e umido tutti i regni"
 
