--- a/spettacoli/sciamanici.qmd
+++ b/spettacoli/sciamanici.qmd
@@ -11,4 +11,12 @@ categories: [AvenidAmerica]
 
 L'anima si nutre di storie e da sempre noi umani amiamo narrare vicende che vedono protagonisti gli animali non umani, quelli con cui condividiamo il pianeta, che si fanno maestri e ci guidano nella scoperta di noi stessi attraverso metafore ed intuizioni, con profondità e con leggerezza.
 
-Monserrat Olavarria Balmaceda - voce Ermanno Dodaro - contrabbasso Jaime Seves Balmaceda - chitarra classica Emmanuel Losio - chitarra elettrica Karen Gomez - percussion
+-   **Monserrat Olavarria Balmaceda** - voce
+
+-   **Ermanno Dodaro** - contrabbasso
+
+-   **Jaime Seves Balmaceda** - chitarra classica
+
+-   **Emmanuel Losio** - chitarra elettrica
+
+-   **Karen Gomez** - percussion
